--- a/css/conspiracy/conspiracy.css
+++ b/css/conspiracy/conspiracy.css
@@ -1978,18 +1978,12 @@ SELECTOR CSSS */
 
 /*START DOCUMENTATION*/
 .containerpadding {
-  /* color: black; */
   padding-top: 1.5rem;
-  
   padding-left: 1rem;
   padding-right: 1rem;
-  background-color: black;
-  /* background-image : url(../images/terror-eye.gif);
-  background-repeat: no-repeat;
-  background-position-y: 40rem; */
-  /* background-position: 5rem 100rem; */
+
   
-  /* border-style: inset; */
+  background-color: black;
   }
 
   #mainheader{
@@ -2026,19 +2020,25 @@ display: none;
    
   #navbardoc {
     position: fixed;
-    padding-top: 1em;
-    padding-left: 0.5em;
+      /* padding-top: 1em;
+      padding-left: 0.5em; */
     /* z-index: 5; */
     /* padding-bottom: 20em; */
     /* margin-bottom: 50em !important; */
     /* font-size: 0.5em; */
     /* grid-area: navbardoc; */
     /* padding-right: 2rem; */
+
+    margin-top: -6.5rem;
+    padding-top: 7rem;
+    padding-left: 0.5em;
+    padding-bottom: 7.5rem;
+    padding-right: 0.5em;
      
   }
   #main-doc {
     grid-area: mainContent;
-    padding-left: 17em;
+    padding-left: 12em;
   }
   #main-doc a{
     color: rgb(255, 255, 255);
@@ -2051,14 +2051,12 @@ display: none;
     background-image: url(../images/red.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-  
-  
-    width: 10em;
+    width: 12em;
     text-align: center;
-    font-size: 1.5em;
-
-  
-  
+    font-size: 1em;
+  }
+  #main-doc h5{
+    padding-left: 2em;
   }
 
   #main-doc .main-section h3{
